put in semi-flowers

--- a/index.html
+++ b/index.html
@@ -7,9 +7,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section class="container">
+      <div class="title">
+        <h2>Semi-Florals</h2>
+      </div>
+      <div class="info">
+        <p>
+          A series of randomly generated floral posters inspired by Andy
+          Warhol's Flowers.
+        </p>
+        <ul class="links">
+          <li>
+            <a
+              href="https://github.com/calciferchang/semi-florals"
+              class="external github"
+              >Source code</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div>
+        <video loop muted playsinline preload="none" autoplay poster>
+          <source
+            src="semiflorals/semiflorals_av1.webm"
+            type='video/webm; codecs="av01.0.08M.08.0.110.01.01.05.0"'
+          />
+          <source src="semiflorals/semiflorals_h264.mp4" type="video/mp4" />
+        </video>
+      </div>
+    </section>
     <section class="container" aria-label="Project overview">
       <div class="title">
-        <h2>FALLOUT: ATOMS FOR WAR & PEACE</h2>
+        <h2>Fallout: Atoms for War & Peace</h2>
       </div>
       <div class="info">
         <p>
