--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="title">
+        <h1>CALCIFER CHANG&nbsp</h1>
+        <aside>(they/them)</aside>
+      </div>
+      <div class="about">
+        <div>
+          <div class="about-row">
+            <span class="about-label">is a
+              graphic designer, web artist, & self-taught front-end dev.</span
+            >
+          </div>
+          <div class="about-row">
+            <span class="about-label">they are interested in&nbsp</span>
+            <ul class="about-list">
+              <li>the poetic web</li>
+              <li>AI's relationship with humanism</li>
+              <li>the history of design</li>
+              <li>the visual DNA of modern design</li>
+            </ul>
+          </div>
+          <div class="about-row">
+            <span class="about-label"> they can be reached at
+                <a href="mailto:c@lcifer.com" class="external email"
+                  >c@lcifer.com</a
+                >
+          </div>
+        </div>
+      </div>
+    </header>
     <section class="container">
       <div class="title">
         <h2>Semi-Florals</h2>
