fix missing span

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       <div class="about">
         <div>
           <div class="about-row">
-            <span class="about-label">is a
-              graphic designer, web artist, & self-taught front-end dev.</span
+            <span class="about-label"
+              >is a graphic designer, web artist, & self-taught front-end
+              dev.</span
             >
           </div>
           <div class="about-row">
@@ -29,10 +30,12 @@
             </ul>
           </div>
           <div class="about-row">
-            <span class="about-label"> they can be reached at
-                <a href="mailto:c@lcifer.com" class="external email"
-                  >c@lcifer.com</a
-                >
+            <span class="about-label">
+              they can be reached at
+              <a href="mailto:c@lcifer.com" class="external email"
+                >c@lcifer.com</a
+              >
+            </span>
           </div>
         </div>
       </div>
