fix responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -13,30 +13,25 @@
         <aside>(they/them)</aside>
       </div>
       <div class="about">
-        <div>
-          <div class="about-row">
-            <span class="about-label"
-              >is a graphic designer, web artist, & self-taught front-end
-              dev.</span
+        <div class="about-row">
+          is a graphic designer, web artist, & self-taught front-end dev.
+        </div>
+        <div class="about-row">
+          <span class="about-label">they are interested in&nbsp</span>
+          <ul class="about-list">
+            <li>the poetic web</li>
+            <li>AI's relationship with humanism</li>
+            <li>the history of design</li>
+            <li>the visual DNA of modern design</li>
+          </ul>
+        </div>
+        <div class="about-row">
+          <span class="about-label">
+            they can be reached at
+            <a href="mailto:c@lcifer.com" class="external email"
+              >c@lcifer.com</a
             >
-          </div>
-          <div class="about-row">
-            <span class="about-label">they are interested in&nbsp</span>
-            <ul class="about-list">
-              <li>the poetic web</li>
-              <li>AI's relationship with humanism</li>
-              <li>the history of design</li>
-              <li>the visual DNA of modern design</li>
-            </ul>
-          </div>
-          <div class="about-row">
-            <span class="about-label">
-              they can be reached at
-              <a href="mailto:c@lcifer.com" class="external email"
-                >c@lcifer.com</a
-              >
-            </span>
-          </div>
+          </span>
         </div>
       </div>
     </header>
