add livepreview and arena links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,23 @@
         <ul class="links">
           <li>
             <a
+              href="https://calciferchang.github.io/semi-florals/"
+              class="external livepreview"
+              >Live preview</a
+            >
+          </li>
+          <li>
+            <a
               href="https://github.com/calciferchang/semi-florals"
               class="external github"
               >Source code</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.are.na/calcifer-chang/semi-florals"
+              class="external aredotna"
+              >Are.na</a
             >
           </li>
         </ul>
@@ -82,6 +96,15 @@
           which this poster was the figurehead.
         </p>
         <ul class="links">
+          <li>
+            <a
+              class="external livepreview"
+              href="https://poster.consuming.now"
+              target="_blank"
+              rel="noopener"
+              >Live preview</a
+            >
+          </li>
           <li>
             <a
               class="external github"
