add sustainability & build footer

--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
         </video>
       </div>
     </section>
+    <footer>
+      this website
+      <a href="https://www.websitecarbon.com/website/consuming-now/"
+        >is hosted sustainably</a
+      >
+      and was last built on Nov 19, 2025 at 16:40.
+    </footer>
     <script src="scripts/linkhover.js"></script>
   </body>
 </html>
